--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 网页主题色（可选） -->
     <meta name="theme-color" content="#ffffff">
     </head>
-    <title>空运报价单生成器</title>
+    <title>大陆空运报价</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         body {
